--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,31 @@
+.container  {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
 .barre {
     text-decoration: line-through;
 }
 
 .tache {
     display: flex;
-    gap: 30px;
+    gap: 50px;
     align-items: center;
+    border: 1px solid #c7c1c1;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 5px;
+}
+
+.tache h1 {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
 }
