--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,28 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: darkcyan;
 }
+
+.container > div {
+    background-color: whitesmoke;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
 .barre {
     text-decoration: line-through;
 }
 
 .tache {
     display: flex;
-    gap: 50px;
+    gap: 100px;
     align-items: center;
     border: 1px solid #c7c1c1;
     justify-content: space-between;
-    padding: 5px;
+    padding: 10px;
+    background-color: white;
 }
 
 .list {
@@ -25,7 +35,33 @@
 }
 
 .tache h1 {
-    font-size: 20px;
+    font-size: 17px;
     margin: 0;
     padding: 0;
 }
+
+.add {
+    display: flex;
+    gap: 10px;
+}
+
+.add input {
+    flex-grow: 1;
+    padding: 5px 20px;
+    font-size: 16px;
+}
+
+button {
+    font-size: 20px;
+    padding: 5px;
+    background-color: rgb(0, 97, 97);
+    color: white;
+    border: none;
+    margin: 2px;
+    border-radius: 3px;
+}
+
+button:hover {
+    opacity: 0.75;
+}
+
